--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.0",
     "next": "12.1.0",
+    "node-fetch": "^3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.2",
